# prettyplease

./: Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml
cargo-expand/: anyhow-1.0.58.rs  cargo-tally-1.0.8.rs  cxx-1.0.69.rs  erased-serde-0.3.21.rs  serde-1.0.137.rs  serde_derive-1.0.137.rs  syn-1.0.97.rs
cargo-expand/update/: Cargo.toml
examples/: input.rs  output.prettyplease.rs  output.rustc.rs  output.rustfmt.rs
examples/update/: update-examples.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: round_trip.rs
src/: algorithm.rs  attr.rs  classify.rs  convenience.rs  data.rs  expr.rs  file.rs  fixup.rs  generics.rs  item.rs  lib.rs  lifetime.rs  lit.rs  mac.rs  op.rs  pat.rs  path.rs  precedence.rs  ring.rs  stmt.rs  token.rs  ty.rs  unparse.rs
tests/: test.rs  test_precedence.rs
